--- a/XGBoost tuning/XGBoost parameters tuning.ipynb
+++ b/XGBoost tuning/XGBoost parameters tuning.ipynb
@@ -2342,7 +2342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So having right variables usually gives more improvement than hyperparameter tuning"
+    "So having right variables gives more improvement than hyperparameter tuning"
    ]
   }
  ],
